--- a/Debug/JenkinsNotification.Debug.LogViewer/App.xaml
+++ b/Debug/JenkinsNotification.Debug.LogViewer/App.xaml
@@ -1,9 +1,14 @@
 ﻿<Application x:Class="JenkinsNotification.Debug.LogViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:JenkinsNotification.Debug.LogViewer"
-             StartupUri="MainWindow.xaml">
+             xmlns:properties="clr-namespace:JenkinsNotification.Debug.LogViewer.Properties"
+             StartupUri="Views/LogView.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/Generic.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <properties:Resources x:Key="Resources" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
