--- a/src/JenkinsNotification.CustomControls/MessageDialog.xaml
+++ b/src/JenkinsNotification.CustomControls/MessageDialog.xaml
@@ -49,6 +49,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="12" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="12" />
             </Grid.ColumnDefinitions>
             <Border Grid.Column="2">
                 <TextBlock
