--- a/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
+++ b/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
@@ -1,10 +1,11 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
-                    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
-                    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
-                    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
+    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
+    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
+    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/Color.xaml" />
     </ResourceDictionary.MergedDictionaries>
@@ -25,6 +26,7 @@
 
     <!--  #Region アプリケーション全体で使用するConverter定義  -->
     <local.Converters:InvertBooleanConverter x:Key="InvertBooleanConverter" />
+    <local.Converters:BooleanToEnumConverter x:Key="BooleanToEnumConverter" />
     <!--  #End Region アプリケーション全体で使用するConverter定義  -->
 
 
@@ -78,6 +80,49 @@
         <Setter Property="FontSize" Value="{StaticResource View.Main.FontSize}" />
     </Style>
 
+    <Style TargetType="{x:Type local:ItemContent}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:ItemContent}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0">
+                                <TextBlock
+                                    Margin="2,2,2,4"
+                                    FontSize="{TemplateBinding HeaderFontSize}"
+                                    Foreground="{TemplateBinding HeaderForeground}"
+                                    Text="{TemplateBinding Header}" />
+                            </Border>
+                            <Border Grid.Row="1">
+                                <TextBlock
+                                    Margin="8,2,2,6"
+                                    FontSize="{TemplateBinding DescriptionFontSize}"
+                                    Foreground="{TemplateBinding DescriptionForeground}"
+                                    Text="{TemplateBinding Description}"
+                                    TextWrapping="WrapWithOverflow" />
+                            </Border>
+                            <Border Grid.Row="2">
+                                <ContentPresenter
+                                    Margin="{TemplateBinding Padding}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    SnapsToDevicePixels="True" />
+                            </Border>
+                        </Grid>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     <!--  #End Region 独自コンポーネントのStyle定義  -->
 
 </ResourceDictionary>
