--- a/src/JenkinsNotification.CustomControls/MessageDialog.xaml
+++ b/src/JenkinsNotification.CustomControls/MessageDialog.xaml
@@ -1,23 +1,22 @@
-﻿<Window
-    x:Class="JenkinsNotification.CustomControls.MessageDialog"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    x:Name="self"
-    Title="MessageDialog"
-    MinWidth="300"
-    MinHeight="140"
-    Background="{StaticResource MessageDialog.Main.Background}"
-    BorderBrush="{StaticResource MessageDialog.Main.BorderBrush}"
-    BorderThickness="1"
-    Foreground="{StaticResource MessageDialog.Main.Foreground}"
-    ResizeMode="NoResize"
-    SizeToContent="WidthAndHeight"
-    SnapsToDevicePixels="True"
-    WindowStyle="None"
-    mc:Ignorable="d">
+﻿<Window x:Class="JenkinsNotification.CustomControls.MessageDialog"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        x:Name="self"
+        Title="MessageDialog"
+        MinWidth="300"
+        MinHeight="140"
+        Background="{StaticResource MessageDialog.Main.Background}"
+        BorderBrush="{StaticResource MessageDialog.Main.BorderBrush}"
+        BorderThickness="1"
+        Foreground="{StaticResource MessageDialog.Main.Foreground}"
+        ResizeMode="NoResize"
+        SizeToContent="WidthAndHeight"
+        SnapsToDevicePixels="True"
+        WindowStyle="None"
+        mc:Ignorable="d">
     <Window.Resources>
         <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
             <Setter Property="Padding" Value="12,4" />
@@ -32,17 +31,19 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <DockPanel
-            x:Name="CaptionAreaDockPanel"
-            Grid.Row="0"
-            HorizontalAlignment="Stretch"
-            Background="{StaticResource MessageDialog.Caption.Background}"
-            MouseLeftButtonDown="CaptionAreaDockPanel_OnMouseLeftButtonDown">
-            <TextBlock
-                Margin="8,4"
-                VerticalAlignment="Center"
-                Foreground="{StaticResource MessageDialog.Caption.Foreground}"
-                Text="{Binding Caption, ElementName=self, Mode=OneWay}" />
+        <DockPanel x:Name="CaptionAreaDockPanel"
+                   Grid.Row="0"
+                   Height="{StaticResource View.Caption.Height}"
+                   HorizontalAlignment="Stretch"
+                   Background="{StaticResource MessageDialog.Caption.Background}"
+                   MouseLeftButtonDown="CaptionAreaDockPanel_OnMouseLeftButtonDown">
+            <TextBlock Margin="8,4"
+                       VerticalAlignment="Center"
+                       FontSize="{StaticResource View.Caption.FontSize}"
+                       Foreground="{StaticResource MessageDialog.Caption.Foreground}"
+                       Text="{Binding Caption,
+                                      ElementName=self,
+                                      Mode=OneWay}" />
         </DockPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -52,44 +53,47 @@
                 <ColumnDefinition Width="12" />
             </Grid.ColumnDefinitions>
             <Border Grid.Column="2">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Text="{Binding Message, ElementName=self, Mode=OneWay}"
-                    TextTrimming="CharacterEllipsis"
-                    TextWrapping="WrapWithOverflow" />
+                <TextBlock VerticalAlignment="Center"
+                           Text="{Binding Message,
+                                          ElementName=self,
+                                          Mode=OneWay}"
+                           TextTrimming="CharacterEllipsis"
+                           TextWrapping="WrapWithOverflow" />
             </Border>
         </Grid>
         <Grid Grid.Row="2">
-            <Border
-                Height="2"
-                Margin="12,0"
-                Background="{StaticResource MessageDialog.Separator.Background}" />
+            <Border Height="2"
+                    Margin="12,0"
+                    Background="{StaticResource MessageDialog.Separator.Background}" />
         </Grid>
         <Border Grid.Row="3">
-            <StackPanel
-                Margin="12,8"
-                HorizontalAlignment="Right"
-                Orientation="Horizontal">
-                <Button
-                    x:Name="OkButton"
-                    Click="OkButton_OnClick"
-                    Content="{Binding OK, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
-                    Visibility="Collapsed" />
-                <Button
-                    x:Name="YesButton"
-                    Click="YesButton_OnClick"
-                    Content="{Binding Yes, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
-                    Visibility="Collapsed" />
-                <Button
-                    x:Name="NoButton"
-                    Click="NoButton_OnClick"
-                    Content="{Binding No, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
-                    Visibility="Collapsed" />
-                <Button
-                    x:Name="CancelButton"
-                    Click="CancelButton_OnClick"
-                    Content="{Binding Cancel, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
-                    Visibility="Collapsed" />
+            <StackPanel Margin="12,8"
+                        HorizontalAlignment="Right"
+                        Orientation="Horizontal">
+                <Button x:Name="OkButton"
+                        Click="OkButton_OnClick"
+                        Content="{Binding OK,
+                                          Mode=OneWay,
+                                          Source={StaticResource CustomControls.Resources}}"
+                        Visibility="Collapsed" />
+                <Button x:Name="YesButton"
+                        Click="YesButton_OnClick"
+                        Content="{Binding Yes,
+                                          Mode=OneWay,
+                                          Source={StaticResource CustomControls.Resources}}"
+                        Visibility="Collapsed" />
+                <Button x:Name="NoButton"
+                        Click="NoButton_OnClick"
+                        Content="{Binding No,
+                                          Mode=OneWay,
+                                          Source={StaticResource CustomControls.Resources}}"
+                        Visibility="Collapsed" />
+                <Button x:Name="CancelButton"
+                        Click="CancelButton_OnClick"
+                        Content="{Binding Cancel,
+                                          Mode=OneWay,
+                                          Source={StaticResource CustomControls.Resources}}"
+                        Visibility="Collapsed" />
             </StackPanel>
         </Border>
     </Grid>
