--- a/src/JenkinsNotificationTool/App.xaml
+++ b/src/JenkinsNotificationTool/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="JenkinsNotificationTool.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:properties="clr-namespace:JenkinsNotificationTool.Properties"
-             ShutdownMode="OnExplicitShutdown">
+﻿<Application
+    x:Class="JenkinsNotificationTool.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:properties="clr-namespace:JenkinsNotificationTool.Properties"
+    ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
