--- a/src/JenkinsNotification.CustomControls/MessageDialog.xaml
+++ b/src/JenkinsNotification.CustomControls/MessageDialog.xaml
@@ -3,15 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:Name="self"
         Title="MessageDialog"
         MinWidth="300"
         MinHeight="140"
-        Background="{StaticResource MessageDialog.Main.Background}"
-        BorderBrush="{StaticResource MessageDialog.Main.BorderBrush}"
         BorderThickness="1"
-        Foreground="{StaticResource MessageDialog.Main.Foreground}"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
         SnapsToDevicePixels="True"
@@ -24,6 +22,15 @@
             <Setter Property="MinWidth" Value="60" />
         </Style>
     </Window.Resources>
+    <Window.Background>
+        <StaticResource ResourceKey="MessageDialog.Main.Background" />
+    </Window.Background>
+    <Window.BorderBrush>
+        <StaticResource ResourceKey="MessageDialog.Main.BorderBrush" />
+    </Window.BorderBrush>
+    <Window.Foreground>
+        <StaticResource ResourceKey="MessageDialog.Main.Foreground" />
+    </Window.Foreground>
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -45,13 +52,23 @@
                                       ElementName=self,
                                       Mode=OneWay}" />
         </DockPanel>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Margin="18,12">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="12" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="12" />
             </Grid.ColumnDefinitions>
+            <Border Grid.Column="0">
+
+                <local:MessageIcon Width="48"
+                                   Height="48"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   IconType="{Binding IconType,
+                                                      ElementName=self,
+                                                      Mode=OneWay}" />
+
+            </Border>
             <Border Grid.Column="2">
                 <TextBlock VerticalAlignment="Center"
                            Text="{Binding Message,
