--- a/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
+++ b/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
@@ -1,12 +1,12 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
-    xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
-    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
-    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
-    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
-    xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
+                    xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
+                    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+                    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
+                    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/Color.xaml" />
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/EnumDataProvider.xaml" />
@@ -107,6 +107,12 @@
     <Style BasedOn="{StaticResource MaterialDesignTabablzControlStyle}" TargetType="{x:Type dragablz:TabablzControl}" />
     <!--  #End Region Dragablz のコンポーネントのStyle  -->
 
+
+    <!--  #Region MaterialDesign のコンポーネントのStyle  -->
+
+    <!--  #End Region MaterialDesign のコンポーネントのStyle  -->
+
+
     <!--  #Region 独自コンポーネントのStyle定義  -->
     <!--  このプロエジェクトで作成した独自コンポーネントのStyleおよび、Templateを定義します。  -->
 
@@ -119,43 +125,38 @@
         <Setter Property="FontSize" Value="{StaticResource View.Main.FontSize}" />
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
-                <WindowChrome
-                    CaptionHeight="{DynamicResource {x:Static SystemParameters.WindowCaptionHeightKey}}"
-                    CornerRadius="3"
-                    GlassFrameThickness="0"
-                    ResizeBorderThickness="5"
-                    UseAeroCaptionButtons="False" />
+                <WindowChrome CaptionHeight="{DynamicResource {x:Static SystemParameters.WindowCaptionHeightKey}}"
+                              CornerRadius="3"
+                              GlassFrameThickness="0"
+                              ResizeBorderThickness="5"
+                              UseAeroCaptionButtons="False" />
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
-                    <Border
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        SnapsToDevicePixels="True"
-                        UseLayoutRounding="True">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="True"
+                            UseLayoutRounding="True">
                         <Grid SnapsToDevicePixels="True" UseLayoutRounding="True">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            <DockPanel
-                                Grid.Row="0"
-                                Height="{StaticResource View.Caption.Height}"
-                                Background="{StaticResource MessageDialog.Caption.Background}">
+                            <DockPanel Grid.Row="0"
+                                       Height="{StaticResource View.Caption.Height}"
+                                       Background="{StaticResource MessageDialog.Caption.Background}">
                                 <Image Margin="8,2" Source="{TemplateBinding Icon}" />
-                                <TextBlock
-                                    VerticalAlignment="Center"
-                                    DockPanel.Dock="Left"
-                                    FontSize="{StaticResource View.Caption.FontSize}"
-                                    Foreground="{StaticResource MessageDialog.Caption.Foreground}"
-                                    Text="{TemplateBinding Title}" />
-                                <StackPanel
-                                    HorizontalAlignment="Right"
-                                    DockPanel.Dock="Right"
-                                    Orientation="Horizontal">
+                                <TextBlock VerticalAlignment="Center"
+                                           DockPanel.Dock="Left"
+                                           FontSize="{StaticResource View.Caption.FontSize}"
+                                           Foreground="{StaticResource MessageDialog.Caption.Foreground}"
+                                           Text="{TemplateBinding Title}" />
+                                <StackPanel HorizontalAlignment="Right"
+                                            DockPanel.Dock="Right"
+                                            Orientation="Horizontal">
                                     <StackPanel.Resources>
                                         <Style BasedOn="{StaticResource MaterialDesignToolButton}" TargetType="{x:Type Button}">
                                             <Setter Property="FontFamily" Value="Marlett" />
@@ -170,31 +171,34 @@
                                             <Setter Property="Foreground" Value="{StaticResource MessageDialog.Caption.Foreground}" />
                                         </Style>
                                     </StackPanel.Resources>
-                                    <Button
-                                        x:Name="Part_MinimumButtonKey"
-                                        Content="0"
-                                        ToolTip="{Binding Minimum, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
-                                    <Button
-                                        x:Name="Part_MaximumButtonKey"
-                                        Content="1"
-                                        ToolTip="{Binding Maximum, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
-                                    <Button
-                                        x:Name="Part_RestoreButtonKey"
-                                        Content="2"
-                                        ToolTip="{Binding Restore, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
-                                    <Button
-                                        x:Name="Part_CloseButtonKey"
-                                        Content="r"
-                                        ToolTip="{Binding Close, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button x:Name="Part_MinimumButtonKey"
+                                            Content="0"
+                                            ToolTip="{Binding Minimum,
+                                                              Mode=OneWay,
+                                                              Source={StaticResource CustomControls.Resources}}" />
+                                    <Button x:Name="Part_MaximumButtonKey"
+                                            Content="1"
+                                            ToolTip="{Binding Maximum,
+                                                              Mode=OneWay,
+                                                              Source={StaticResource CustomControls.Resources}}" />
+                                    <Button x:Name="Part_RestoreButtonKey"
+                                            Content="2"
+                                            ToolTip="{Binding Restore,
+                                                              Mode=OneWay,
+                                                              Source={StaticResource CustomControls.Resources}}" />
+                                    <Button x:Name="Part_CloseButtonKey"
+                                            Content="r"
+                                            ToolTip="{Binding Close,
+                                                              Mode=OneWay,
+                                                              Source={StaticResource CustomControls.Resources}}" />
                                 </StackPanel>
                             </DockPanel>
-                            <ContentPresenter
-                                Grid.Row="1"
-                                Margin="{TemplateBinding Padding}"
-                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                SnapsToDevicePixels="True"
-                                UseLayoutRounding="True" />
+                            <ContentPresenter Grid.Row="1"
+                                              Margin="{TemplateBinding Padding}"
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                              SnapsToDevicePixels="True"
+                                              UseLayoutRounding="True" />
                         </Grid>
                     </Border>
                 </ControlTemplate>
@@ -206,11 +210,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ItemContent}">
-                    <Border
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        SnapsToDevicePixels="True">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="True">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -218,32 +221,50 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <Border Grid.Row="0">
-                                <TextBlock
-                                    Margin="2,2,2,4"
-                                    FontSize="{TemplateBinding HeaderFontSize}"
-                                    Foreground="{TemplateBinding HeaderForeground}"
-                                    Text="{TemplateBinding Header}" />
+                                <TextBlock Margin="2,2,2,4"
+                                           FontSize="{TemplateBinding HeaderFontSize}"
+                                           Foreground="{TemplateBinding HeaderForeground}"
+                                           Text="{TemplateBinding Header}" />
                             </Border>
                             <Border Grid.Row="1">
-                                <TextBlock
-                                    Margin="8,2,2,6"
-                                    FontSize="{TemplateBinding DescriptionFontSize}"
-                                    Foreground="{TemplateBinding DescriptionForeground}"
-                                    Text="{TemplateBinding Description}"
-                                    TextWrapping="WrapWithOverflow" />
+                                <TextBlock Margin="8,2,2,6"
+                                           FontSize="{TemplateBinding DescriptionFontSize}"
+                                           Foreground="{TemplateBinding DescriptionForeground}"
+                                           Text="{TemplateBinding Description}"
+                                           TextWrapping="WrapWithOverflow" />
                             </Border>
                             <Border Grid.Row="2">
-                                <ContentPresenter
-                                    Margin="{TemplateBinding Padding}"
-                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                    SnapsToDevicePixels="True" />
+                                <ContentPresenter Margin="{TemplateBinding Padding}"
+                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                  SnapsToDevicePixels="True" />
                             </Border>
                         </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style BasedOn="{StaticResource {x:Type materialDesign:PackIcon}}" TargetType="{x:Type local:MessageIcon}">
+        <Style.Triggers>
+            <Trigger Property="IconType" Value="Information">
+                <Setter Property="Kind" Value="InformationOutline" />
+                <Setter Property="Foreground" Value="{StaticResource Icon.Information.Background}" />
+            </Trigger>
+            <Trigger Property="IconType" Value="Question">
+                <Setter Property="Kind" Value="HelpCircleOutline" />
+                <Setter Property="Foreground" Value="{StaticResource Icon.Question.Background}" />
+            </Trigger>
+            <Trigger Property="IconType" Value="Warning">
+                <Setter Property="Kind" Value="AlertOutline" />
+                <Setter Property="Foreground" Value="{StaticResource Icon.Warning.Background}" />
+            </Trigger>
+            <Trigger Property="IconType" Value="Error">
+                <Setter Property="Kind" Value="CloseCircleOutline" />
+                <Setter Property="Foreground" Value="{StaticResource Icon.Error.Background}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
     <!--  #End Region 独自コンポーネントのStyle定義  -->
 
